# calorie-counter-from-youtube

./: LICENSE  README.md  config_loader.py  pyproject.toml  total_calories.py
